--- a/greeter/data/Greeter.css
+++ b/greeter/data/Greeter.css
@@ -1,4 +1,5 @@
-.avatar {
+.avatar .image {
+    border-radius: 100%;
     border-color: alpha (#000, 0.25);
     box-shadow:
         inset 0 0 0 1px alpha (#fff, 0.05),
@@ -44,9 +45,8 @@
 }
 
 .time {
-    font-size: 72px;
-    font-family: Raleway;
-    font-weight: 100;
+    font-size: 50px;
+    font-weight: 50px;
 }
 
 .pm {
