--- a/greeter/data/Greeter.css
+++ b/greeter/data/Greeter.css
@@ -40,6 +40,16 @@
         0 1px 2px alpha (#000, 0.6);
 }
 
+.power {
+    icon-shadow:
+	0 0 2px alpha (#000, 0.3),
+	0 1px 2px alpha (#000, 0.6);
+   text-shadow:
+        0 0 2px alpha (#000, 0.3),
+        0 1px 2px alpha (#000, 0.6);		
+}
+
+
 .h2 {
     font-size: 24px;
 }
