--- a/theme/gnome-shell/gnome-shell.css
+++ b/theme/gnome-shell/gnome-shell.css
@@ -39,7 +39,7 @@ stage {
     text-shadow: 0 1px rgba(255, 255, 255, 0);
     color: #5c616c;
     background-color: #fbfbfc;
-    border: 1px solid #5294e2;
+    border: 1px solid #15909C;
     box-shadow: inset 0 1px rgba(251, 251, 252, 0.05); }
   .button:hover, .notification-banner .notification-button:hover, .hotplug-notification-item:hover {
     text-shadow: 0 1px rgba(255, 255, 255, 0);
@@ -51,13 +51,13 @@ stage {
     text-shadow: 0 1px rgba(255, 255, 255, 0);
     color: #5c616c;
     background-color: #fbfbfc;
-    border: 1px solid #5294e2;
+    border: 1px solid #15909C;
     box-shadow: inset 0 1px rgba(251, 251, 252, 0.05); }
   .button:active, .notification-banner .notification-button:active, .hotplug-notification-item:active, .button:active:focus, .notification-banner .notification-button:active:focus, .hotplug-notification-item:active:focus {
     text-shadow: 0 1px rgba(255, 255, 255, 0);
     color: #ffffff;
-    background-color: #5294e2;
-    border: 1px solid #5294e2;
+    background-color: #15909C;
+    border: 1px solid #15909C;
     box-shadow: inset 0 1px rgba(82, 148, 226, 0.05); }
   .button:insensitive, .notification-banner .notification-button:insensitive, .hotplug-notification-item:insensitive {
     text-shadow: 0 1px rgba(255, 255, 255, 0);
@@ -70,7 +70,7 @@ StEntry {
   padding: 7px;
   caret-size: 1px;
   caret-color: #5c616c;
-  selection-background-color: #5294e2;
+  selection-background-color: #15909C;
   selected-color: #ffffff;
   transition-duration: 300ms;
   border-radius: 3px;
@@ -81,7 +81,7 @@ StEntry {
   StEntry:focus, StEntry:hover {
     color: #5c616c;
     background-color: #ffffff;
-    border: 1px solid #5294e2;
+    border: 1px solid #15909C;
     box-shadow: inset 0 2px 4px rgba(255, 255, 255, 0.05); }
   StEntry:insensitive {
     color: rgba(92, 97, 108, 0.55);
@@ -115,13 +115,13 @@ StScrollBar {
     StScrollBar StButton#vhandle:hover, StScrollBar StButton#hhandle:hover {
       background-color: #c7c9cd; }
     StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
-      background-color: #5294e2; }
+      background-color: #15909C; }
 
 .slider {
   -slider-height: 4px;
   -slider-background-color: #cfd6e6;
   -slider-border-color: transparent;
-  -slider-active-background-color: #5294e2;
+  -slider-active-background-color: #15909C;
   -slider-active-border-color: transparent;
   -slider-border-width: 0;
   -slider-handle-radius: 0px;
@@ -166,7 +166,7 @@ StScrollBar {
 .shell-link {
   color: #2679db; }
   .shell-link:hover {
-    color: #5294e2; }
+    color: #15909C; }
 
 .headline {
   font-size: 110%; }
@@ -197,10 +197,10 @@ StScrollBar {
     .modal-dialog-linked-button:hover {
       background-color: rgba(64, 69, 83, 0.95); }
     .modal-dialog-linked-button:focus {
-      color: #5294e2; }
+      color: #15909C; }
     .modal-dialog-linked-button:active {
       color: #ffffff;
-      background-color: #5294e2; }
+      background-color: #15909C; }
     .modal-dialog-linked-button:insensitive {
       color: rgba(186, 195, 207, 0.5);
       background-color: rgba(49, 52, 63, 0.95); }
@@ -404,8 +404,8 @@ StScrollBar {
   border: 1px solid #dcdfe3;
   border-radius: 3px; }
   .audio-selection-device:active, .audio-selection-device:hover, .audio-selection-device:focus {
-    background-color: #5294e2;
-    border-color: #5294e2; }
+    background-color: #15909C;
+    border-color: #15909C; }
 
 .audio-selection-device-box {
   padding: 20px;
@@ -541,9 +541,9 @@ StScrollBar {
     height: 4px;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 2px;
-    color: #5294e2; }
+    color: #15909C; }
   .osd-window .level-bar {
-    background-color: #5294e2;
+    background-color: #15909C;
     border-radius: 2px; }
 
 .resize-popup {
@@ -572,11 +572,11 @@ StScrollBar {
     border: 1px solid transparent; }
     .switcher-list .item-box:outlined {
       padding: 8px;
-      border: 1px solid #5294e2; }
+      border: 1px solid #15909C; }
     .switcher-list .item-box:selected {
       color: #ffffff;
-      background-color: #5294e2;
-      border: 1px solid #5294e2; }
+      background-color: #15909C;
+      border: 1px solid #15909C; }
   .switcher-list .thumbnail-box {
     padding: 2px;
     spacing: 4px; }
@@ -598,7 +598,7 @@ StScrollBar {
   height: 96px; }
 
 .cycler-highlight {
-  border: 5px solid #5294e2; }
+  border: 5px solid #15909C; }
 
 .workspace-switcher {
   background: transparent;
@@ -616,10 +616,10 @@ StScrollBar {
 
 .ws-switcher-active-up, .ws-switcher-active-down {
   height: 30px;
-  background-color: #5294e2;
+  background-color: #15909C;
   background-size: 96px;
   border-radius: 2px;
-  border: 1px solid #5294e2; }
+  border: 1px solid #15909C; }
 
 .ws-switcher-active-up {
   background-image: url("common-assets/misc/ws-switch-arrow-up.png"); }
@@ -635,7 +635,7 @@ StScrollBar {
 
 .tile-preview {
   background-color: rgba(82, 148, 226, 0.35);
-  border: 1px solid #5294e2; }
+  border: 1px solid #15909C; }
   .tile-preview-left.on-primary {
     border-radius: 0px 0 0 0; }
   .tile-preview-right.on-primary {
@@ -691,7 +691,7 @@ StScrollBar {
       border-color: transparent; }
     #panel .panel-button:active, #panel .panel-button:overview, #panel .panel-button:focus, #panel .panel-button:checked {
       color: #ffffff;
-      background-color: #5294e2;
+      background-color: #15909C;
       box-shadow: none;
       border-bottom-width: 1px;
       border-color: black; }
@@ -722,7 +722,7 @@ StScrollBar {
   #panel .screencast-indicator {
     color: #FC4138; }
   #panel .clock-display > * > *:last-child {
-    color: #5294e2;
+    color: #15909C;
     margin-left: .3em; }
   #panel .popup-menu-arrow {
     width: 0; }
@@ -779,11 +779,11 @@ StScrollBar {
     padding: 13px;
     color: #5c616c;
     background-color: transparent;
-    border: 1px solid #5294e2; }
+    border: 1px solid #15909C; }
   .system-menu-action:active {
     color: #ffffff;
-    background-color: #5294e2;
-    border: 1px solid #5294e2; }
+    background-color: #15909C;
+    border: 1px solid #15909C; }
   .system-menu-action > StIcon {
     icon-size: 16px; }
 
@@ -837,8 +837,8 @@ StScrollBar {
   .message-list-section-title:active {
     text-shadow: 0 1px rgba(255, 255, 255, 0);
     color: #ffffff;
-    background-color: #5294e2;
-    border: 1px solid #5294e2;
+    background-color: #15909C;
+    border: 1px solid #15909C;
     box-shadow: inset 0 1px rgba(82, 148, 226, 0.05); }
 
 .datemenu-today-button .date-label {
@@ -933,11 +933,11 @@ StScrollBar {
 .calendar-today:hover {
   font-weight: bold;
   color: #ffffff;
-  background-color: #5294e2;
+  background-color: #15909C;
   border-width: 0; }
 
 .calendar-day-with-events {
-  color: #5294e2;
+  color: #15909C;
   font-weight: bold; }
 
 .calendar-today.calendar-day-with-events {
@@ -1028,7 +1028,7 @@ StScrollBar {
   .message-media-control:hover {
     color: #5c616c; }
   .message-media-control:active {
-    color: #5294e2; }
+    color: #15909C; }
 
 .media-message-cover-icon {
   icon-size: 32px; }
@@ -1106,7 +1106,7 @@ StScrollBar {
     padding: 12px;
     spacing: 0px; }
     .nm-dialog-item:selected {
-      background-color: #5294e2;
+      background-color: #15909C;
       color: #ffffff; }
   .nm-dialog-icons {
     spacing: .5em; }
@@ -1162,9 +1162,9 @@ StScrollBar {
   .search-entry:hover, .search-entry:focus {
     color: #ffffff;
     caret-color: #ffffff;
-    background-color: #5294e2;
+    background-color: #15909C;
     selection-background-color: #ffffff;
-    selected-color: #5294e2; }
+    selected-color: #15909C; }
     .search-entry:hover .search-entry-icon, .search-entry:focus .search-entry-icon {
       color: #ffffff; }
 
@@ -1251,7 +1251,7 @@ StScrollBar {
 .right #dash .app-well-app:hover .overview-icon,
 .bottom #dash .app-well-app:hover .overview-icon,
 .top #dash .app-well-app:hover .overview-icon {
-  background-color: #5294e2; }
+  background-color: #15909C; }
 
 #dash .app-well-app:active .overview-icon,
 .right #dash .app-well-app:active .overview-icon,
@@ -1264,7 +1264,7 @@ StScrollBar {
   width: 11px;
   height: 2px;
   margin-bottom: 2px;
-  background-color: #5294e2; }
+  background-color: #15909C; }
 
 #dashtodockContainer .app-well-app-running-dot {
   background: none;
@@ -1290,14 +1290,14 @@ StScrollBar {
 
 .show-apps:hover .overview-icon {
   background-color: rgba(0, 0, 0, 0.7);
-  color: #5294e2; }
+  color: #15909C; }
 
 .show-apps:active .overview-icon,
 .show-apps:active .show-apps-icon,
 .show-apps:checked .overview-icon,
 .show-apps:checked .show-apps-icon {
   color: #ffffff;
-  background-color: #5294e2;
+  background-color: #15909C;
   box-shadow: none;
   transition-duration: 0ms; }
 
@@ -1326,7 +1326,7 @@ StScrollBar {
     box-shadow: inset 0 1px rgba(0, 0, 0, 0.05); }
   .app-view-control:checked {
     color: #ffffff;
-    background-color: #5294e2; }
+    background-color: #15909C; }
   .app-view-control:first-child:ltr, .app-view-control:last-child:rtl {
     border-radius: 2px 0 0 2px;
     border-right-width: 0; }
@@ -1353,7 +1353,7 @@ StScrollBar {
 .grid-search-result:active .overview-icon,
 .grid-search-result:checked .overview-icon {
   background-color: rgba(31, 33, 40, 0.85);
-  box-shadow: inset 0 0 #5294e2; }
+  box-shadow: inset 0 0 #15909C; }
 
 .app-well-app:hover .overview-icon,
 .app-well-app:focus .overview-icon,
@@ -1373,7 +1373,7 @@ StScrollBar {
   width: 20px;
   height: 2px;
   margin-bottom: 4px;
-  background-color: #5294e2; }
+  background-color: #15909C; }
 
 .search-provider-icon,
 .list-search-result, .app-well-app .overview-icon,
@@ -1395,11 +1395,11 @@ StScrollBar {
 
 .app-well-app.app-folder:active > .overview-icon, .app-well-app.app-folder:checked > .overview-icon {
   color: #ffffff;
-  background-color: #5294e2;
+  background-color: #15909C;
   box-shadow: none; }
 
 .app-well-app.app-folder:focus > .overview-icon {
-  background-color: #5294e2; }
+  background-color: #15909C; }
 
 .app-folder-popup {
   -arrow-border-radius: 2px;
@@ -1534,7 +1534,7 @@ StScrollBar {
 
 .chat-sent {
   padding-left: 18pt;
-  color: #5294e2; }
+  color: #15909C; }
   .chat-sent:rtl {
     padding-left: 0;
     padding-right: 18pt; }
@@ -1624,7 +1624,7 @@ StScrollBar {
   min-width: 155px; }
 
 .magnifier-zoom-region {
-  border: 2px solid #5294e2; }
+  border: 2px solid #15909C; }
   .magnifier-zoom-region.full-screen {
     border-width: 0; }
 
@@ -1663,7 +1663,7 @@ StScrollBar {
     text-shadow: 0 1px rgba(255, 255, 255, 0);
     color: #ffffff;
     border: 1px solid rgba(26, 28, 34, 0.35);
-    background-color: #5294e2;
+    background-color: #15909C;
     box-shadow: inset 0 1px rgba(82, 148, 226, 0.05); }
   .keyboard-key:grayed {
     text-shadow: 0 1px rgba(255, 255, 255, 0);
@@ -1698,7 +1698,7 @@ StScrollBar {
   border-radius: 2px;
   color: #BAC3CF; }
   .candidate-box:selected, .candidate-box:hover {
-    background-color: #5294e2;
+    background-color: #15909C;
     color: #ffffff; }
 
 .candidate-page-button-box {
@@ -1756,8 +1756,8 @@ StScrollBar {
       .login-dialog .modal-dialog-button:default:active {
         text-shadow: 0 1px rgba(255, 255, 255, 0);
         color: #ffffff;
-        background-color: #5294e2;
-        border: 1px solid #5294e2;
+        background-color: #15909C;
+        border: 1px solid #15909C;
         box-shadow: inset 0 1px rgba(82, 148, 226, 0.05); }
       .login-dialog .modal-dialog-button:default:insensitive {
         text-shadow: 0 1px rgba(255, 255, 255, 0);
@@ -1804,10 +1804,10 @@ StScrollBar {
   padding: .2em;
   width: 23em; }
   .login-dialog-user-list:expanded .login-dialog-user-list-item:focus {
-    background-color: #5294e2;
+    background-color: #15909C;
     color: #ffffff; }
   .login-dialog-user-list:expanded .login-dialog-user-list-item:logged-in {
-    border-right: 2px solid #5294e2; }
+    border-right: 2px solid #15909C; }
 
 .login-dialog-user-list-item {
   border-radius: 5px;
@@ -1818,7 +1818,7 @@ StScrollBar {
   .login-dialog-user-list-item:rtl {
     padding-left: 1em; }
   .login-dialog-user-list-item:hover {
-    background-color: #5294e2;
+    background-color: #15909C;
     color: #ffffff; }
   .login-dialog-user-list-item .login-dialog-timed-login-indicator {
     height: 2px;
@@ -1957,7 +1957,7 @@ StScrollBar {
       text-shadow: black 0px 2px 2px; }
     #LookingGlassDialog .notebook-tab:selected {
       border-bottom-width: 0px;
-      color: #5294e2;
+      color: #15909C;
       text-shadow: black 0px 2px 2px; }
   #LookingGlassDialog StBoxLayout#EvalBox {
     padding: 4px;
@@ -1967,7 +1967,7 @@ StScrollBar {
 
 .lg-dialog StEntry {
   caret-color: #ffffff;
-  selection-background-color: #5294e2;
+  selection-background-color: #15909C;
   selected-color: #ffffff;
   color: #BAC3CF;
   background-color: rgba(102, 109, 132, 0.35);
@@ -1975,16 +1975,16 @@ StScrollBar {
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05); }
   .lg-dialog StEntry:focus {
     color: #ffffff;
-    background-color: #5294e2;
+    background-color: #15909C;
     border: 1px solid rgba(26, 28, 34, 0.35);
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05);
     selection-background-color: #ffffff;
-    selected-color: #5294e2; }
+    selected-color: #15909C; }
 
 .lg-dialog .shell-link {
   color: #2679db; }
   .lg-dialog .shell-link:hover {
-    color: #5294e2; }
+    color: #15909C; }
 
 .lg-completions-text {
   font-size: .9em;
