--- a/galal/data/notification.css
+++ b/galal/data/notification.css
@@ -9,6 +9,31 @@
     color: #333;
 }
 
+.notify-close {
+    padding: 3px;
+    border: none;
+    border-radius: 100%;
+    background-image:
+        linear-gradient(
+            to bottom,
+            @BLACK_300,
+            @BLACK_500
+        );
+    box-shadow:
+        inset 0 0 0 1px alpha (#fff, 0.02),
+        inset 0 1px 0 0 alpha (#fff, 0.07),
+        inset 0 -1px 0 0 alpha (#fff, 0.01),
+        0 0 0 1px alpha (#000, 0.7),
+        0 1px 2px alpha (#000, 0.16),
+        0 2px 3px alpha (#000, 0.23);
+    margin: 3px;
+}
+
+.notify-close image {
+    color: #fff;
+    -gtk-icon-shadow: 0 1px 1px alpha (#000, 0.6);
+}
+
 window,
 decoration,
 .notification {
